test/libsolidity/syntaxTests/nameAndTypeResolution/512_library_function_without_implementation_internal.sol
library L {
    function f() internal;
}
// ----
// TypeError: (16-38): Internal library function must be implemented if declared.
